--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./css/main.css">
     <title>Sitemap - Pages List</title>
 </head>
 <body class="bg-black text-white antialiased">
