--- a/src/html/ui-kit.html
+++ b/src/html/ui-kit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Premium Design System</title>
 </head>
 
@@ -113,6 +113,25 @@
       </div>
     </section>
 
+    <section class="search-section px-4 sm:px-0">
+      <div class="flex items-center gap-3 sm:gap-4 mb-6 sm:mb-8">
+        <div class="w-[3px] h-5 sm:h-6 bg-blue-500 rounded-full shadow-[0_0_15px_rgba(59,130,246,0.5)]"></div>
+        <h2 class="text-[18px] sm:text-[24px] font-semibold tracking-tight">Search Overlay</h2>
+      </div>
+
+      <div class="bg-[#0a0a0a] border border-white/10 rounded-[20px] sm:rounded-[24px] p-6 sm:p-10 flex flex-col items-center justify-center min-h-[250px] sm:min-h-[300px] relative overflow-hidden group">
+        <div class="absolute inset-0 bg-[#0a0a0a]"></div>
+        
+        <div class="relative z-10 flex flex-col items-center text-center gap-6 w-full">
+          <button 
+            id="openSearch"
+            class="w-full sm:w-auto px-6 sm:px-8 py-3.5 sm:py-4 bg-white text-black font-bold rounded-xl sm:rounded-2xl hover:bg-blue-500 hover:text-white transition-all duration-300 shadow-xl active:scale-95 text-sm sm:text-base">
+              Preview Search Modal
+          </button>
+        </div>
+      </div>
+    </section>
+
     <section class="related-posts-ui">
       <div class="flex items-center gap-4 mb-8">
         <div class="w-[3px] h-6 bg-blue-500 rounded-full shadow-[0_0_15px_rgba(59,130,246,0.5)]"></div>
@@ -134,10 +153,57 @@
         </div>
       </div>
     </section>
+    <footer class="py-20 text-center border-t border-white/5">
+      <p class="text-white/20 text-xs tracking-[0.4em] uppercase">Premium Component System</p>
+    </footer>
   </div>
+  <div id="searchPopup" class="fixed inset-0 z-[100] hidden items-start justify-center pt-24 px-5 transition-all duration-300">
+      <div id="searchPopupOverlay" class="absolute inset-0 bg-zinc-950/80 backdrop-blur-xl"></div>
 
-  <footer class="py-20 text-center border-t border-white/5">
-    <p class="text-white/20 text-xs tracking-[0.4em] uppercase">Premium Component System</p>
-  </footer>
+      <div class="relative w-full max-w-2xl z-10 transform transition-all">
+          <div class="relative group">
+              <div class="absolute inset-y-0 left-5 flex items-center pointer-events-none">
+                  <svg class="h-5 w-5 text-zinc-500 group-focus-within:text-blue-500 transition-colors" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                  </svg>
+              </div>
+
+              <input
+                  id="search-input"
+                  type="text"
+                  class="block w-full rounded-2xl bg-zinc-900/50 border border-white/10 py-5 pl-14 pr-24 text-xl text-white placeholder-zinc-500 focus:outline-none focus:ring-2 focus:ring-blue-500/50 focus:bg-zinc-900 shadow-2xl transition-all duration-200"
+                  placeholder="Where to next?..."
+                  autocomplete="off"
+              />
+
+              <div class="absolute inset-y-0 right-4 flex items-center gap-3">
+                  <button
+                      id="closeSearch"
+                      class="p-2 text-zinc-400 hover:text-white hover:bg-white/10 rounded-full transition-all">
+                      <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                      </svg>
+                  </button>
+              </div>
+          </div>
+
+          <div class="mt-4 overflow-hidden bg-zinc-900/80 border border-white/5 backdrop-blur-md rounded-2xl shadow-2xl">
+              <div class="p-6">
+                  <span class="text-xs font-bold uppercase tracking-widest text-zinc-500 mb-4 flex items-center">
+                      Popular Destinations
+                  </span>
+                  <div class="flex flex-wrap gap-2">
+                      <a href="#" class="px-4 py-2 bg-zinc-800/50 hover:bg-blue-600 hover:text-white border border-white/5 rounded-xl text-sm text-zinc-300 transition-all">Paris, France</a>
+                      <a href="#" class="px-4 py-2 bg-zinc-800/50 hover:bg-blue-600 hover:text-white border border-white/5 rounded-xl text-sm text-zinc-300 transition-all">Sushi Bars</a>
+                      <a href="#" class="px-4 py-2 bg-zinc-800/50 hover:bg-blue-600 hover:text-white border border-white/5 rounded-xl text-sm text-zinc-300 transition-all">Mountain Retreats</a>
+                  </div>
+              </div>
+
+              <div class="bg-white/[0.02] px-6 py-3 border-t border-white/5">
+                  <p class="text-[11px] text-zinc-500">Press enter to search for more results</p>
+              </div>
+          </div>
+      </div>
+  </div>
 </body>
 </html>
