--- a/src/html/single-post.html
+++ b/src/html/single-post.html
@@ -8,8 +8,9 @@
 </head>
 <body class="bg-black">
     <div class="wrapper">
+        <!-- Header -->
         <header class="header-default fixed top-0 left-0 z-50 w-full bg-black px-5 xl:px-10 2xl:px-0 py-6 text-white">
-            <div class="max-w-[1920px] mx-auto flex items-center justify-between">
+            <div class="max-w-[1960px] mx-auto flex items-center justify-between  2xl:px-[40px]">
                 <a class="text-xl font-semibold tracking-tight text-white hover:text-white focus:text-white active:text-white no-underline" href="#logo">
                     Travel Guider
                 </a>
@@ -54,32 +55,29 @@
                     </ul>
                 </nav>
 
-                <div class="flex items-center space-x-4 md:space-x-6 text-sm">
-                    <div class="hidden lg:flex items-center space-x-6">
+                <div class="flex items-center gap-4 md:gap-6 text-sm">
+                    <div class="hidden lg:flex items-center gap-6">
                         <a href="#" class="transition-colors hover:text-blue-400">Subscribe</a>
                         <a href="#" class="transition-colors hover:text-blue-400">Contact</a>
                     </div>
                     
-                    <button class="p-1 hover:text-blue-400 transition-colors">
-                        <svg class="h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <button id="openSearch" class="w-[20px] h-[20px] hover:text-blue-400 transition-colors">
+                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" class="w-full h-full">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                         </svg>
                     </button>
 
-                    <button id="openSearch" class="w-[50px] h-[50px] lg:hidden p-1 text-white hover:text-blue-400 transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="w-[50px] h-[50px]" fill="none"
-                            viewBox="0 0 50 50" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h16M4 18h16" />
+                    <button id="openBurgerBtn" class="w-[20px] h-[20px] lg:hidden text-white hover:text-blue-400 transition-colors">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-full h-full">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                         </svg>
                     </button>
-                    <!-- <button id="openSearch" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-500 transition">
-                        Search
-                    </button> -->
                 </div>
             </div>
-        </header>     
+        </header>
+        <!-- Main  -->
         <main class="main">
+            <!-- Single Post -->
             <div class="single-post">
                 <div class="lg:pt-[150px] pt-[75px] lg:pb-[100px] pb-[50px] ">
                     <div class="container mx-auto relative 2xl:max-w-[1152px] xl:px-[0px] lg:px-[120px] px-[48px]">
@@ -126,7 +124,7 @@
                         </nav>
                         <!-- Content -->
                         <div class="mx-auto max-w-[800px] flex flex-col gap-5 pb-[50px] lg:pb-[100px] xl:pl-[0px]">
-                           <h1 class="text-white text-[30px] leading-[38px] md:text-[44px] md:leading-[52px] lg:text-[56px] lg:leading-[64px]">
+                            <h1 class="text-white text-[30px] leading-[38px] md:text-[44px] md:leading-[52px] lg:text-[56px] lg:leading-[64px]">
                                 Vitalik Buterin Lays Out the Hidden Weaknesses of Decentralized Stablecoins
                             </h1>
                             <p class="text-[#cecece] font-light text-[18px] leading-[36px] py-[18px]">
@@ -303,20 +301,20 @@
                 </div>
             </div>
         </main>
+        <!-- Footer -->
         <footer class="footer py-[100px] flex items-center justify-center border-t border-[rgb(26,26,26)]">
             <div class="container mx-auto flex flex-col items-center gap-5 text-center">
+                <!-- Content -->
                 <p class="text-[14px] leading-[28px] text-[#bebebe] font-normal max-w-[912px]">
                     By using the Site, the User hereby confirms that he/she has reached the age of 21. If you are not yet 21 years old, do not start or stop using the Site. The Site Administration is not responsible for the legality of the use of the Site and its services by a User who has not reached the age of 21
                 </p>
+                <!-- Navigation -->
                 <nav class="min-h-[46px] flex items-center">
                     <ul class="flex justify-center">
                         <li>
                             <a
                                 href="#"
-                                class="text-[14px] leading-[20px] font-medium text-white
-                                    px-5 py-3
-                                    transition-colors duration-300
-                                    hover:text-blue-400"
+                                class="text-[14px] leading-[20px] font-medium text-white px-5 py-3 transition-colors duration-300 hover:text-blue-400"
                             >
                                 Privacy Policy
                             </a>
@@ -324,10 +322,7 @@
                         <li>
                             <a
                                 href="#"
-                                class="text-[14px] leading-[20px] font-medium text-white
-                                    px-5 py-3
-                                    transition-colors duration-300
-                                    hover:text-blue-400"
+                                class="text-[14px] leading-[20px] font-medium text-white px-5 py-3 transition-colors duration-300 hover:text-blue-400"
                             >
                                 Terms of use
                             </a>
@@ -335,10 +330,7 @@
                         <li>
                             <a
                                 href="#"
-                                class="text-[14px] leading-[20px] font-medium text-white
-                                    px-5 py-3
-                                    transition-colors duration-300
-                                    hover:text-blue-400"
+                                class="text-[14px] leading-[20px] font-medium text-white px-5 py-3 transition-colors duration-300 hover:text-blue-400"
                             >
                                 Marketing
                             </a>
@@ -346,16 +338,14 @@
                         <li>
                             <a
                                 href="#"
-                                class="text-[14px] leading-[20px] font-medium text-white
-                                    px-5 py-3
-                                    transition-colors duration-300
-                                    hover:text-blue-400"
+                                class="text-[14px] leading-[20px] font-medium text-white px-5 py-3 transition-colors duration-300 hover:text-blue-400"
                             >
                                 Impresum
                             </a>
                         </li>
                     </ul>
                 </nav>
+                <!-- Social Icons -->
                 <div class="flex items-center gap-4">
                     <a href="#facebook" class="flex items-center justify-center w-[50px] h-[50px] text-white hover:text-blue-400 transition-colors duration-300" aria-label="Facebook">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
@@ -375,13 +365,14 @@
                         </svg>
                     </a>
                 </div>
+                <!-- Copyright -->
                 <span class="text-[14px] leading-[28px] text-[#d5d5d5] font-normal">
                     Copyrights © 2025 – Powered By
                     <a href="#" class="underline">Spacebox Agency</a>. All Rights Reserved.
                 </span>
             </div>
         </footer>
-        <!-- SEARCH POPUP -->
+        <!-- Search Popup -->
         <div id="searchPopup" class="fixed inset-0 z-50 hidden items-start justify-center pt-24 px-5 transition-all duration-300">
             <div id="searchPopupOverlay" class="absolute inset-0 bg-zinc-950/80 backdrop-blur-xl"></div>
 
@@ -397,7 +388,7 @@
                         id="search-input"
                         type="text"
                         class="block w-full rounded-2xl bg-zinc-900/50 border border-white/10 py-5 pl-14 pr-24 text-xl text-white placeholder-zinc-500 focus:outline-none focus:ring-2 focus:ring-blue-500/50 focus:bg-zinc-900 shadow-2xl transition-all duration-200"
-                        placeholder="Where to next?..."
+                        placeholder="Search..."
                         autocomplete="off"
                     />
 
@@ -426,6 +417,87 @@
 
                     <div class="bg-white/[0.02] px-6 py-3 border-t border-white/5">
                         <p class="text-[11px] text-zinc-500"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Burger Menu -->
+        <div id="burgerMenu"
+            class="fixed inset-0 z-50 hidden flex items-center justify-center transition-all duration-300">
+
+            <!-- Overlay -->
+            <div id="burgerOverlay"
+                class="absolute inset-0 bg-zinc-950/90 backdrop-blur-2xl"></div>
+
+            <!-- Close button -->
+            <button id="closeBurger" class="absolute top-4 right-4 sm:top-5 sm:right-5 z-50 p-2 sm:p-3 text-zinc-400 hover:text-white hover:bg-white/10 rounded-full transition">
+                <svg class="h-6 w-6 sm:h-8 sm:w-8" fill="none"
+                    stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M6 18L18 6M6 6l12 12"/>
+                </svg>
+            </button>
+
+            <!-- Content -->
+            <div class="relative z-10 w-full h-full flex flex-col items-center">
+
+                <!-- Navigation -->
+                <nav class="w-full max-w-md sm:max-w-lg flex flex-col gap-3 sm:gap-4 flex-1 justify-center items-center px-4 sm:px-5">
+
+                    <span class="text-xs font-bold uppercase tracking-widest text-zinc-500 mb-2 text-center">
+                        Navigation
+                    </span>
+
+                    <!-- Link -->
+                    <a href="#"
+                    class="group w-full flex items-center justify-between  p-4 sm:p-5 rounded-xl sm:rounded-2xl bg-zinc-900/50 border border-white/5 hover:border-blue-500/50 hover:bg-zinc-900 transition">
+                        <span class="text-xl sm:text-2xl font-medium text-zinc-200 group-hover:text-white">
+                            Where to Go
+                        </span>
+                        <svg class="h-5 w-5 sm:h-6 sm:w-6 text-zinc-600 group-hover:text-blue-500"
+                            fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 5l7 7-7 7"/>
+                        </svg>
+                    </a>
+
+                    <a href="#" class="group w-full flex items-center justify-between p-4 sm:p-5 rounded-xl sm:rounded-2xl bg-zinc-900/50 border border-white/5 hover:border-blue-500/50 hover:bg-zinc-900 transition">
+                        <span class="text-xl sm:text-2xl font-medium text-zinc-200 group-hover:text-white">
+                            Where to Eat
+                        </span>
+                        <svg class="h-5 w-5 sm:h-6 sm:w-6 text-zinc-600 group-hover:text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 5l7 7-7 7"/>
+                        </svg>
+                    </a>
+
+                    <a href="#" class="group w-full flex items-center justify-between p-4 sm:p-5 rounded-xl sm:rounded-2xl bg-zinc-900/50 border border-white/5 hover:border-blue-500/50 hover:bg-zinc-900 transition">
+                        <span class="text-xl sm:text-2xl font-medium text-zinc-200 group-hover:text-white">
+                            Places to Stay
+                        </span>
+                        <svg class="h-5 w-5 sm:h-6 sm:w-6 text-zinc-600 group-hover:text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 5l7 7-7 7"/>
+                        </svg>
+                    </a>
+
+                        <a href="#" class="group w-full flex items-center justify-between p-4 sm:p-5 rounded-xl sm:rounded-2xl bg-zinc-900/50 border border-white/5 hover:border-blue-500/50 hover:bg-zinc-900 transition">
+                        <span class="text-xl sm:text-2xl font-medium text-zinc-200 group-hover:text-white">
+                            What to Do
+                        </span>
+                        <svg class="h-5 w-5 sm:h-6 sm:w-6 text-zinc-600 group-hover:text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 5l7 7-7 7"/>
+                        </svg>
+                    </a>
+                </nav>
+
+                <!-- Divider + Socials -->
+                <div class="w-full border-t border-white/5 pt-6 sm:pt-8 pb-8 sm:pb-10">
+                    <div class="max-w-lg mx-auto flex flex-col sm:flex-row items-center justify-center gap-4 sm:gap-6">
+                        <a href="#" class="text-zinc-500 hover:text-white text-sm uppercase">Instagram</a>
+                        <a href="#" class="text-zinc-500 hover:text-white text-sm uppercase">Telegram</a>
+                        <a href="#" class="text-zinc-500 hover:text-white text-sm uppercase">Twitter</a>
                     </div>
                 </div>
             </div>
