--- a/src/html/ui-kit.html
+++ b/src/html/ui-kit.html
@@ -22,23 +22,54 @@
         </div>
         <!-- Colors Section -->
         <section class="colors-section">
+          <!-- Header -->
           <div class="flex items-center gap-4 mb-8 group">
-            <div class="w-[3px] h-6 bg-blue-500 rounded-full shadow-[0_0_15px_rgba(59,130,246,0.5)]"></div>
-            <h2 class="text-[20px] sm:text-[24px] font-semibold tracking-tight">Colors</h2>
+            <div
+              class="w-[3px] h-6 bg-blue-500 rounded-full
+                    shadow-[0_0_15px_rgba(59,130,246,0.5)]">
+            </div>
+            <h2 class="text-[20px] sm:text-[24px] font-semibold tracking-tight">
+              Colors
+            </h2>
           </div>
-          <div class="bg-[#0a0a0a] border border-white/10 rounded-[24px] p-6 sm:p-8 flex flex-col gap-8 divide-y divide-white/5">
+
+          <!-- Card -->
+          <div
+            class="bg-[#0a0a0a] border border-white/10 rounded-[24px]
+                  p-6 sm:p-8
+                  flex flex-col gap-8 divide-y divide-white/5">
+
+            <!-- Base Colors -->
             <div class="flex flex-col gap-6 py-2">
-              <span class="text-[11px] uppercase tracking-[0.2em] opacity-40 font-medium">Base Colors</span>
+              <span class="text-[11px] uppercase tracking-[0.2em] opacity-40 font-medium">
+                Base Colors
+              </span>
+
               <div class="flex flex-wrap gap-6">
-                <div class="group flex items-center gap-4 px-4 py-3 rounded-2xl transition-all duration-300 hover:bg-white/5 cursor-pointer min-w-[220px]">
-                  <div class="w-14 h-14 rounded-xl border border-white/20 shadow-inner transition-transform duration-500 group-hover:scale-105" style="background-color: #FFFFFF;"></div>
+                <div
+                  class="group flex items-center gap-4 px-4 py-3 rounded-2xl
+                        transition-all duration-300 hover:bg-white/5
+                        cursor-pointer min-w-[220px]">
+                  <div
+                    class="w-14 h-14 rounded-xl border border-white/20 shadow-inner
+                          transition-transform duration-500 group-hover:scale-105"
+                    style="background-color:#FFFFFF">
+                  </div>
                   <div class="flex flex-col">
                     <span class="text-[15px] font-medium text-white">White</span>
                     <code class="text-[11px] text-white/40 font-mono mt-1">#FFFFFF</code>
                   </div>
                 </div>
-                <div class="group flex items-center gap-4 px-4 py-3 rounded-2xl transition-all duration-300 hover:bg-white/5 cursor-pointer min-w-[220px]">
-                  <div class="w-14 h-14 rounded-xl shadow-inner transition-transform duration-500 group-hover:scale-105" style="background-color: #FF5733;"></div>
+
+                <div
+                  class="group flex items-center gap-4 px-4 py-3 rounded-2xl
+                        transition-all duration-300 hover:bg-white/5
+                        cursor-pointer min-w-[220px]">
+                  <div
+                    class="w-14 h-14 rounded-xl shadow-inner
+                          transition-transform duration-500 group-hover:scale-105"
+                    style="background-color:#FF5733">
+                  </div>
                   <div class="flex flex-col">
                     <span class="text-[15px] font-medium text-white">Red Accent</span>
                     <code class="text-[11px] text-white/40 font-mono mt-1">#FF5733</code>
@@ -46,11 +77,24 @@
                 </div>
               </div>
             </div>
+
+            <!-- Brand Colors -->
             <div class="flex flex-col gap-6 pt-8 pb-2">
-              <span class="text-[11px] uppercase tracking-[0.2em] opacity-40 font-medium">Brand Colors</span>
+              <span class="text-[11px] uppercase tracking-[0.2em] opacity-40 font-medium">
+                Brand Colors
+              </span>
+
               <div class="flex flex-wrap gap-6">
-                <div class="group flex items-center gap-4 px-4 py-3 rounded-2xl transition-all duration-300 hover:bg-white/5 cursor-pointer min-w-[220px]">
-                  <div class="w-14 h-14 rounded-xl shadow-[0_0_20px_rgba(51,87,255,0.3)] transition-transform duration-500 group-hover:scale-105" style="background-color: #3357FF;"></div>
+                <div
+                  class="group flex items-center gap-4 px-4 py-3 rounded-2xl
+                        transition-all duration-300 hover:bg-white/5
+                        cursor-pointer min-w-[220px]">
+                  <div
+                    class="w-14 h-14 rounded-xl
+                          shadow-[0_0_20px_rgba(51,87,255,0.3)]
+                          transition-transform duration-500 group-hover:scale-105"
+                    style="background-color:#3357FF">
+                  </div>
                   <div class="flex flex-col">
                     <span class="text-[15px] font-medium text-white">Electric Blue</span>
                     <code class="text-[11px] text-white/40 font-mono mt-1">#3357FF</code>
@@ -60,77 +104,90 @@
             </div>
           </div>
         </section>
-        <!-- Typorgaphy Section -->
-        <section class="typography-section">
-          <div class="flex items-center gap-4 mb-6 group">
-              <div class="w-[3px] h-6 bg-blue-500 rounded-full"></div>
-              <h2 class="text-[18px] sm:text-[22px] font-semibold tracking-tight">Typography</h2>
+
+        <!-- Typography Section -->
+        <section class="typography-section mt-16">
+          <!-- Header -->
+          <div class="flex items-center gap-4 mb-8 group">
+            <div
+              class="w-[3px] h-6 bg-blue-500 rounded-full
+                    shadow-[0_0_15px_rgba(59,130,246,0.5)]">
+            </div>
+            <h2 class="text-[20px] sm:text-[24px] font-semibold tracking-tight">
+              Typography
+            </h2>
           </div>
 
-          <div class="bg-[#0a0a0a] border border-white/10 rounded-[18px] sm:rounded-[24px] p-6 sm:p-10 flex flex-col gap-10 divide-y divide-white/5">
+          <!-- Card (IDENTICAL to Colors) -->
+          <div
+            class="bg-[#0a0a0a] border border-white/10 rounded-[24px]
+                  p-6 sm:p-8
+                  flex flex-col gap-10 divide-y divide-white/5">
+
+            <!-- Headings -->
             <div class="flex flex-col gap-6 pt-2">
-              <span class="text-[10px] sm:text-[11px] uppercase tracking-widest opacity-40 font-sans border-none">Headings</span>
-              <div class="flex flex-col gap-4">
-                  <h1 class="text-4xl sm:text-5xl font-bold">Heading 1 <span class="text-blue-500">Blue Span</span></h1>
-                  <h2 class="text-3xl sm:text-4xl font-bold">Heading 2 <span class="text-blue-500">Blue Span</span></h2>
-                  <h3 class="text-2xl sm:text-3xl font-bold">Heading 3 <span class="text-blue-500">Blue Span</span></h3>
+              <span class="text-[11px] uppercase tracking-[0.2em] opacity-40 font-medium">
+                Headings
+              </span>
+
+              <div class="article flex flex-col gap-4">
+                <h1>Heading 1 <span>Blue Span</span></h1>
+                <h2>Heading 2 <span>Blue Span</span></h2>
+                <h3>Heading 3 <span>Blue Span</span></h3>
               </div>
             </div>
 
+            <!-- Paragraphs -->
             <div class="flex flex-col gap-6 pt-8">
-              <span class="text-[10px] sm:text-[11px] uppercase tracking-widest opacity-40 font-sans border-none">Paragraphs & Inline</span>
-              <div class="max-w-3xl">
-                  <p class="text-white/70 leading-relaxed text-base sm:text-lg">
-                  Це стандартний текст параграфа. Тут можна побачити <b class="text-blue-400 font-bold">жирне накреслення</b>, 
-                  <i>курсив</i>, та 
-                  <a href="#" class="text-blue-400 underline decoration-blue-400/30 hover:decoration-blue-400 transition-all duration-300">стилізоване посилання</a>.
-                  </p>
+              <span class="text-[11px] uppercase tracking-[0.2em] opacity-40 font-medium">
+                Paragraphs & Inline
+              </span>
+
+              <div class="article max-w-3xl">
+                <p>
+                  This is a standard paragraph with <b>bold</b>, <i>italic</i> and
+                  <a href="#">a link</a>.
+                </p>
               </div>
             </div>
 
+            <!-- Lists -->
             <div class="flex flex-col gap-6 pt-8">
-              <span class="text-[10px] sm:text-[11px] uppercase tracking-widest opacity-40 font-sans border-none">Lists</span>
-              <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-                  <ul class="space-y-3 text-white/70 list-none">
-                      <li class="flex items-start gap-3 before:content-['—'] before:text-blue-500">Елемент списку з кастомною рискою</li>
-                      <li class="flex items-start gap-3 before:content-['—'] before:text-blue-500">Риска додається через імітацію</li>
-                  </ul>
-                  <ol class="space-y-3 text-white/70 [counter-reset:list-counter] list-none">
-                      <li class="flex items-start gap-3 [counter-increment:list-counter] before:content-[counter(list-counter)] before:font-bold before:text-blue-500">Перший елемент з цифрою</li>
-                      <li class="flex items-start gap-3 [counter-increment:list-counter] before:content-[counter(list-counter)] before:font-bold before:text-blue-500">Текст залишається білим</li>
-                  </ol>
+              <span class="text-[11px] uppercase tracking-[0.2em] opacity-40 font-medium">
+                Lists
+              </span>
+
+              <div class="article grid grid-cols-1 md:grid-cols-2 gap-10">
+                <ul>
+                  <li>List item with a custom dash</li>
+                  <li>The dash is added using a pseudo-element</li>
+                </ul>
+
+                <ol>
+                  <li>First numbered item</li>
+                  <li>Text remains white</li>
+                </ol>
               </div>
             </div>
 
+            <!-- Blockquote -->
             <div class="flex flex-col gap-6 pt-8 pb-4">
-              <span class="text-[10px] sm:text-[11px] uppercase tracking-widest opacity-40 font-sans border-none">Blockquote</span>
-              <div class="max-w-2xl border-l-2 border-blue-500 pl-6 py-2">
-                  <blockquote class="italic text-xl sm:text-2xl text-white/90 leading-snug">
-                  "Цитата використовує акцентну лінію з лівого боку для виділення важливих думок."
-                  </blockquote>
-                  <cite class="block mt-4 text-sm text-white/40 not-italic">Джерело цитати — <a href="#" class="text-blue-400 hover:underline transition-all">Website Link</a></cite>
-            </div>
-          </div>
-        </section>
-        <!-- Search Section -->
-        <section class="search-section px-4 sm:px-0">
-          <div class="flex items-center gap-3 sm:gap-4 mb-6 sm:mb-8">
-            <div class="w-[3px] h-5 sm:h-6 bg-blue-500 rounded-full shadow-[0_0_15px_rgba(59,130,246,0.5)]"></div>
-            <h2 class="text-[18px] sm:text-[24px] font-semibold tracking-tight">Search Overlay</h2>
-          </div>
+              <span class="text-[11px] uppercase tracking-[0.2em] opacity-40 font-medium">
+                Blockquote
+              </span>
 
-          <div class="bg-[#0a0a0a] border border-white/10 rounded-[20px] sm:rounded-[24px] p-6 sm:p-10 flex flex-col items-center justify-center min-h-[250px] sm:min-h-[300px] relative overflow-hidden group">
-            <div class="absolute inset-0 bg-[#0a0a0a]"></div>
-            
-            <div class="relative z-10 flex flex-col items-center text-center gap-6 w-full">
-              <button 
-                id="openSearch"
-                class="w-full sm:w-auto px-6 sm:px-8 py-3.5 sm:py-4 bg-white text-black font-bold rounded-xl sm:rounded-2xl hover:bg-blue-500 hover:text-white transition-all duration-300 shadow-xl active:scale-95 text-sm sm:text-base">
-                  Preview Search Modal
-              </button>
+              <div class="article max-w-2xl">
+                <blockquote>
+                  This quote uses a left accent line to highlight important ideas.
+                </blockquote>
+                <cite>
+                  Quote source — <a href="#">Website Link</a>
+                </cite>
+              </div>
             </div>
           </div>
         </section>
+
         <!-- Related Posts Section -->
         <section class="related-posts-section">
           <div class="flex items-center gap-4 mb-8">
@@ -157,55 +214,7 @@
           <p class="text-white/20 text-xs tracking-[0.4em] uppercase">Premium Component System</p>
         </footer>
     </div>
-    <!-- Search Popup -->
-    <div id="searchPopup" class="fixed inset-0 z-[100] hidden items-start justify-center pt-24 px-5 transition-all duration-300">
-        <div id="searchPopupOverlay" class="absolute inset-0 bg-zinc-950/80 backdrop-blur-xl"></div>
 
-        <div class="relative w-full max-w-2xl z-10 transform transition-all">
-            <div class="relative group">
-                <div class="absolute inset-y-0 left-5 flex items-center pointer-events-none">
-                    <svg class="h-5 w-5 text-zinc-500 group-focus-within:text-blue-500 transition-colors" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                    </svg>
-                </div>
-
-                <input
-                    id="search-input"
-                    type="text"
-                    class="block w-full rounded-2xl bg-zinc-900/50 border border-white/10 py-5 pl-14 pr-24 text-xl text-white placeholder-zinc-500 focus:outline-none focus:ring-2 focus:ring-blue-500/50 focus:bg-zinc-900 shadow-2xl transition-all duration-200"
-                    placeholder="Where to next?..."
-                    autocomplete="off"
-                />
-
-                <div class="absolute inset-y-0 right-4 flex items-center gap-3">
-                    <button
-                        id="closeSearch"
-                        class="p-2 text-zinc-400 hover:text-white hover:bg-white/10 rounded-full transition-all">
-                        <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-            </div>
-
-            <div class="mt-4 overflow-hidden bg-zinc-900/80 border border-white/5 backdrop-blur-md rounded-2xl shadow-2xl">
-                <div class="p-6">
-                    <span class="text-xs font-bold uppercase tracking-widest text-zinc-500 mb-4 flex items-center">
-                        Popular Destinations
-                    </span>
-                    <div class="flex flex-wrap gap-2">
-                        <a href="#" class="px-4 py-2 bg-zinc-800/50 hover:bg-blue-600 hover:text-white border border-white/5 rounded-xl text-sm text-zinc-300 transition-all">Paris, France</a>
-                        <a href="#" class="px-4 py-2 bg-zinc-800/50 hover:bg-blue-600 hover:text-white border border-white/5 rounded-xl text-sm text-zinc-300 transition-all">Sushi Bars</a>
-                        <a href="#" class="px-4 py-2 bg-zinc-800/50 hover:bg-blue-600 hover:text-white border border-white/5 rounded-xl text-sm text-zinc-300 transition-all">Mountain Retreats</a>
-                    </div>
-                </div>
-
-                <div class="bg-white/[0.02] px-6 py-3 border-t border-white/5">
-                    <p class="text-[11px] text-zinc-500">Press enter to search for more results</p>
-                </div>
-            </div>
-        </div>
-    </div>
   </div>
 </body>
 </html>
