--- a/src/html/single-post.html
+++ b/src/html/single-post.html
@@ -514,6 +514,10 @@
             </div>
         </div>
     </div>
+    <a href="./index.html" class="btn-back">
+        <span>&#8592;</span> 
+        Back 
+    </a>
 </body>
 
 <script src="./js/main.js"></script>
