--- a/src/html/ui-kit.html
+++ b/src/html/ui-kit.html
@@ -209,5 +209,9 @@
         </footer>
     </div>
   </div>
+    <a href="./index.html" class="btn-back">
+      <span>&#8592;</span> 
+      Back 
+  </a>
 </body>
 </html>
